--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   
   h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
   }
   
   h2 {
@@ -27,6 +29,12 @@ body {
     margin-right: auto;
     padding: 20px;
     max-width: 500px;
+  }
+  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   hr {
@@ -57,7 +65,7 @@ body {
   
   .price {
     text-align: right;
-    width: 25%
+    width: 25%;
   }
   
   /* FOOTER */
@@ -66,14 +74,22 @@ body {
     font-size: 14px;
   }
   
+  .address {
+    margin-bottom: 5px;
+  }
+  
   a {
     color: black;
   }
   
   a:visited {
-    color: grey;
+    color: black;
   }
   
   a:hover {
+    color: brown;
+  }
+  
+  a:active {
     color: brown;
   }
